# obsidianlib

./: README.md  bashrc.sh  install.gil  pyproject.toml
src/obsidianlib/: __init__.py
